preproPara, summarization == none enabled
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@45051 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 #
 # Copyright (C) 2008 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.7.1 (build 05. March 2010)
+- preproPara, summarization == none enabled
+
 affyPara 1.5.11 (build 14. August 2009)
 - several documentation fixes (broken links)
 
