--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 #
 # Copyright (C) 2008-2010 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.7.4 (build 15. April 2010)
+- fixes for new release
+
 affyPara 1.7.2 (build 08. March 2010)
 - gsub warning (extend=T) fixed in every function
 - Copyright update
