bugfix in vsnrmaPara
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@50927 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,9 @@
 #
 # Copyright (C) 2008-2010 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
+affyPara 1.11.1 (build 17. November 2010)
+- bugfix in vsnrmaPara
+
 affyPara 1.7.4 (build 15. April 2010)
 - fixes for new release
 
