cdfname passing added for read.affybatch and prepropara
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@68043 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@
 # Copyright (C) 2008-2010 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
 
+affyPara 1.17.1 (build 26. Juli 2012)
+- bugfix for cdfname object in read.affypara, see BioC Mailinglist, thanks Tobias
+
 affyPara 1.11.4 (build 10. March 2011)
 - bugfix for cluster object
 
