some more bugfixes to get clean build
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/affyPara@74769 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,9 @@
 # Copyright (C) 2008-2013 : Markus Schmidberger <schmidb@ibe.med.uni-muenchen.de>
 ###############################################################################
 
+affyPara 1.19.2 (build 24. March 2013)
+- more Sweave bugfix to get a clean build
+
 affyPara 1.19.1 (build 23. March 2013)
 - bugfix to get a clean build
 
